--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4.0.1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/matthewcen/grab-site
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.0.0
